# cppsimpleuri

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt  examples.cpp
include/salzaverde/: query.h  uri.h
include/salzaverde/detail/: encoder.h
src/: query.cpp  uri.cpp
src/detail/: encoder.cpp
src/salzaverde/: query.cpp  uri.cpp
test/: CMakeLists.txt  encoder_test.cpp  query_test.cpp  uri_test.cpp
test/config/: uri_components.h
test/detail/: cartesian_product.h  uri_generator.h
